# remote-agent-shell

./: .gitignore  Makefile  README.md
daemon/: .coverage  README.md  pyproject.toml
daemon/src/ras/: __init__.py  adapters.py  attached_session.py  auth.py  cli.py  clipboard_manager.py  clipboard_platform.py  clipboard_types.py  config.py  connection.py  connection_manager.py  control_mode.py  crypto.py  daemon.py  daemon_lock.py  device_store.py  errors.py  formatting.py  heartbeat.py  ip_provider.py  logging.py  manager_factory.py  message.py  message_dispatcher.py  ntfy.py  output_streamer.py  peer.py  protocols.py  sdp_validator.py  server.py  session_registry.py  signaling.py  storage.py  stun.py  tmux.py  tmux_handler.py  vpn_candidate_injector.py
daemon/tests/: conftest.py  test_adapters.py  test_attached_session.py  test_auth.py  test_cli.py  test_clipboard_e2e.py  test_clipboard_integration.py  test_clipboard_manager.py  test_clipboard_platform.py  test_comprehensive_open_source_patterns.py  test_config.py  test_connection_edge_cases.py  test_connection_gaps.py  test_connection_info.py  test_connection_manager.py  test_control_mode.py  test_crypto.py  test_daemon.py  test_daemon_lock.py  test_daemon_ntfy_lifecycle.py  test_device_store.py  test_e2e_command_flow.py  test_e2e_connection.py  test_e2e_daemon.py  test_e2e_security.py  test_e2e_tmux.py  test_e2e_unified_server.py  test_heartbeat.py  test_integration_daemon.py  test_integration_manager_flow.py  test_lan_direct_e2e.py  test_lan_direct_peer.py  test_lan_direct_vectors.py  test_logging.py  test_manager_factory.py  test_message.py  test_message_dispatcher.py  test_ntfy.py  test_ntfy_retry.py  test_output_streamer.py  (+23 more)
daemon/tests/clipboard/: test_vectors.py
(+421 files in other folders)
