[project]
name = "ras"
version = "0.1.0"
description = "RemoteAgentShell daemon - Control AI agents from your phone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ras = "ras.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ras"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
