[project]
name = "ras"
version = "0.1.0"
description = "RemoteAgentShell daemon - Control AI agents from your phone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "aiortc>=1.14.0",
    "betterproto>=2.0.0b6",
    "click>=8.0",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "netifaces>=0.11.0",
    "pillow>=12.1.0",
    "pyyaml>=6.0",
    "qrcode>=8.2",
]

[project.optional-dependencies]
dev = [
    "betterproto[compiler]>=2.0.0b6",
    "grpcio-tools>=1.60.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=1.3.0",
    "pytest-aiohttp>=1.1.0",
]

[project.scripts]
ras = "ras.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ras"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
